--- a/index.html
+++ b/index.html
@@ -3,35 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Form de Pago</title>
+  <title>Formulario de Pago</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
   <style>
     body {
+      margin: 0;
+      padding: 0;
       background-color: #f8f9fa;
+      min-height: 100vh;
+      font-family: sans-serif;
     }
-    .card {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 25px;
+
+    .formulario-container {
+      padding: 40px 5%;
+      width: 100%;
     }
+
     .payment-icons i {
       font-size: 2rem;
-      margin-right: 15px;
+      margin: 0 10px;
       color: #444;
     }
+
     .payment-icons i:hover {
-      color: #007bff;
+      color: #0d6efd;
       transform: scale(1.1);
       transition: 0.2s;
+    }
+
+    @media (max-height: 700px) {
+      .formulario-container {
+        padding-top: 20px;
+        padding-bottom: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
-<div class="card shadow">
-  <h3 class="text-center mb-4">Form de Pago</h3>
+<div class="formulario-container">
+  <h2 class="text-center mb-4">Formulario de Pago</h2>
 
   <div class="mb-4 text-center">
     <p class="mb-2 fw-semibold">Nosotros aceptamos:</p>
@@ -46,7 +58,7 @@
   <form>
     <div class="mb-3">
       <label for="nombreTitular" class="form-label">Nombre del Titular</label>
-      <input type="text" class="form-control" id="nombreTitular" placeholder="Nombre que aparece en la tarjeta" required>
+      <input type="text" class="form-control" id="nombreTitular" placeholder="Nombre como aparece en la tarjeta" required>
     </div>
 
     <div class="mb-3">
@@ -92,7 +104,7 @@
 
     <div class="mb-3">
       <label for="mensaje" class="form-label">Mensaje Adicional</label>
-      <textarea class="form-control" id="mensaje" rows="3" placeholder="¿Algo que quiera agregar?"></textarea>
+      <textarea class="form-control" id="mensaje" rows="3" placeholder="¿Algún comentario especial?"></textarea>
     </div>
 
     <button type="submit" class="btn btn-success w-100">Pagar Ahora</button>
